--- a/단위테스트 리허설.md
+++ b/단위테스트 리허설.md
@@ -1,4 +1,4 @@
-```creat 단위테스트 리허설
+##creat 단위테스트 리허설
 ```sql
 CREATE TABLE Student (
     student_id   INT AUTO_INCREMENT PRIMARY KEY,
@@ -52,4 +52,18 @@ CREATE TABLE Score (
         FOREIGN KEY (exam_id)
         REFERENCES Exam(exam_id)
         ON DELETE CASCADE
+);
+
+## 외래키 제약 조건 예시
+CREATE TABLE Member (
+    id INT PRIMARY KEY,
+    name VARCHAR(100)
+);
+
+CREATE TABLE Orders (
+    id INT PRIMARY KEY,
+    member_id INT,
+    FOREIGN KEY (member_id) REFERENCES Member(id)
+        ON DELETE CASCADE
+        ON UPDATE CASCADE
 );
