--- a/단위테스트 리허설.md
+++ b/단위테스트 리허설.md
@@ -67,3 +67,7 @@ CREATE TABLE Orders (
         ON DELETE CASCADE
         ON UPDATE CASCADE
 );
+
+## 컬럼 추가
+
+ALTER TABLE Student ADD birth_date DATE;
