--- a/단위테스트 리허설.md
+++ b/단위테스트 리허설.md
@@ -54,7 +54,8 @@ CREATE TABLE Score (
         ON DELETE CASCADE
 );
 
-## 외래키 제약 조건 예시
+##외래키 제약 조건 예시
+```sql
 CREATE TABLE Member (
     id INT PRIMARY KEY,
     name VARCHAR(100)
@@ -68,6 +69,10 @@ CREATE TABLE Orders (
         ON UPDATE CASCADE
 );
 
-## 컬럼 추가
+##컬럼 추가
 
 ALTER TABLE Student ADD birth_date DATE;
+
+##컬럼 변경
+
+ALTER TABLE Course MODIFY instructor VARCHAR(80) NOT NULL;
