--- a/단위테스트 리허설.md
+++ b/단위테스트 리허설.md
@@ -53,8 +53,8 @@ CREATE TABLE Score (
         REFERENCES Exam(exam_id)
         ON DELETE CASCADE
 );
-
-# 외래키 제약 조건 예시
+```
+## 외래키 제약 조건 예시
 ```sql
 CREATE TABLE Member (
     id INT PRIMARY KEY,
@@ -68,15 +68,15 @@ CREATE TABLE Orders (
         ON DELETE CASCADE
         ON UPDATE CASCADE
 );
-
-# 컬럼 추가
+```
+## 컬럼 추가
 ```sql
 ALTER TABLE Student ADD birth_date DATE;
-
-# 컬럼 변경
+```
+## 컬럼 변경
 ```sql
 ALTER TABLE Course MODIFY instructor VARCHAR(80) NOT NULL;
-
-# 테이블 이름 변경
+```
+## 테이블 이름 변경
 ```sql
 ALTER TABLE Exam RENAME TO ExamInfo;
