--- a/단위테스트 리허설.md
+++ b/단위테스트 리허설.md
@@ -80,3 +80,9 @@ ALTER TABLE Course MODIFY instructor VARCHAR(80) NOT NULL;
 ## 테이블 이름 변경
 ```sql
 ALTER TABLE Exam RENAME TO ExamInfo;
+```
+## 제약조건 추가
+```sql
+ADD CONSTRAINT score_ck CHECK (score BETWEEN 0 AND 100);
+
+
