--- a/단위테스트 리허설.md
+++ b/단위테스트 리허설.md
@@ -83,6 +83,6 @@ ALTER TABLE Exam RENAME TO ExamInfo;
 ```
 ## 제약조건 추가
 ```sql
-ADD CONSTRAINT score_ck CHECK (score BETWEEN 0 AND 100);
+ALTER TABLE score ADD CONSTRAINT score_ck CHECK (score BETWEEN 0 AND 100);
 
 
