Add insert examples for Student table
Added example insert statements for the Student table.

--- a/단위테스트 리허설.md
+++ b/단위테스트 리허설.md
@@ -81,6 +81,16 @@ ALTER TABLE Course MODIFY instructor VARCHAR(80) NOT NULL;
 ```sql
 ALTER TABLE Exam RENAME TO ExamInfo;
 ```
+## insert 예시
+```sql
+INSERT INTO Student (name, email, phone)
+VALUES
+('김학생', 'kim@student.com', '010-1111-1111'),
+('이학생', 'lee@student.com', '010-2222-2222'),
+('박학생', 'park@student.com', '010-3333-3333'),
+('최학생', 'choi@student.com', '010-4444-4444'),
+('정학생', 'jung@student.com', '010-5555-5555');
+```
 ## 제약조건 추가
 ```sql
 ALTER TABLE score ADD CONSTRAINT score_ck CHECK (score BETWEEN 0 AND 100);
