--- a/단위테스트 리허설.md
+++ b/단위테스트 리허설.md
@@ -87,26 +87,29 @@ ALTER TABLE score ADD CONSTRAINT score_ck CHECK (score BETWEEN 0 AND 100);
 ```
 ## insert 예시
 ```sql
-INSERT INTO Student (name, email, phone)
-VALUES
+INSERT INTO Student (name, email, phone)VALUES
 ('김학생', 'kim@student.com', '010-1111-1111'),
 ('이학생', 'lee@student.com', '010-2222-2222'),
 ('박학생', 'park@student.com', '010-3333-3333'),
 ('최학생', 'choi@student.com', '010-4444-4444'),
 ('정학생', 'jung@student.com', '010-5555-5555');
-INSERT INTO Course (title, instructor, fee, opened_at)
-VALUES
+```sql
+INSERT INTO Course (title, instructor, fee, opened_at)VALUES
 ('SQL 기본', '홍강사', 80000, '2025-01-10'),
 ('데이터 모델링', '이강사', 100000, '2025-01-15'),
 ('고급 SQL', '박강사', 120000, '2025-01-20');
-INSERT INTO ExamInfo (course_id, exam_name, exam_date)
-VALUES
+```sql
+INSERT INTO ExamInfo (course_id, exam_name, exam_date)VALUES
 (1, 'SQL 중간고사', '2025-02-01'),
 (1, 'SQL 기말고사', '2025-02-20'),
 (2, '모델링 평가', '2025-02-10');
+```sql
 INSERT INTO Enrollment (student_id, course_id, payment_status)
 VALUES (1, 1, 'PAID'),(2, 1, 'PAID'),(3, 2, 'CANCEL'),(4, 2, 'PAID'),(5, 3, 'PAID');
+```sql
 INSERT INTO Score (student_id, exam_id, score)
 VALUES (1, 1, 95),(2, 1, 82),(3, 3, 76),(4, 3, 88),(5, 2, 90);
+```
+## Update/Delete
 
 
