--- a/단위테스트 리허설.md
+++ b/단위테스트 리허설.md
@@ -93,23 +93,35 @@ INSERT INTO Student (name, email, phone)VALUES
 ('박학생', 'park@student.com', '010-3333-3333'),
 ('최학생', 'choi@student.com', '010-4444-4444'),
 ('정학생', 'jung@student.com', '010-5555-5555');
-```sql
+
 INSERT INTO Course (title, instructor, fee, opened_at)VALUES
 ('SQL 기본', '홍강사', 80000, '2025-01-10'),
 ('데이터 모델링', '이강사', 100000, '2025-01-15'),
 ('고급 SQL', '박강사', 120000, '2025-01-20');
-```sql
+
 INSERT INTO ExamInfo (course_id, exam_name, exam_date)VALUES
 (1, 'SQL 중간고사', '2025-02-01'),
 (1, 'SQL 기말고사', '2025-02-20'),
 (2, '모델링 평가', '2025-02-10');
-```sql
+
 INSERT INTO Enrollment (student_id, course_id, payment_status)
 VALUES (1, 1, 'PAID'),(2, 1, 'PAID'),(3, 2, 'CANCEL'),(4, 2, 'PAID'),(5, 3, 'PAID');
-```sql
+
 INSERT INTO Score (student_id, exam_id, score)
 VALUES (1, 1, 95),(2, 1, 82),(3, 3, 76),(4, 3, 88),(5, 2, 90);
 ```
 ## Update/Delete
+```sql
+UPDATE Enrollment SET payment_status = 'PAID' WHERE payment_status = 'CANCEL';
+
+DELETE FROM Course WHERE fee >= 100000;
+
+UPDATE Student SET email = 'kim.new@student.com' WHERE name = '김학생';
+```
+## LIKE
+```sql
+SELECT * FROM Student WHERE name LIKE '%김%';
+
+SELECT email, SUBSTR(email, INSTR(email, '@') + 1) AS domain FROM Student;
 
 
