--- a/단위테스트 리허설.md
+++ b/단위테스트 리허설.md
@@ -123,5 +123,18 @@ UPDATE Student SET email = 'kim.new@student.com' WHERE name = '김학생';
 SELECT * FROM Student WHERE name LIKE '%김%';
 
 SELECT email, SUBSTR(email, INSTR(email, '@') + 1) AS domain FROM Student;
+```
+## SUBSTR(Subtract String), LENGTH
+```sql
+SELECT email, SUBSTR(email, INSTR(email, '@') + 1) AS domain FROM Student;
+
+SELECT title, LENGTH(title) AS title_length FROM Course;
+```
+## DATE_SUB, NOW
+```sql
+SELECT * FROM Enrollment WHERE enrolled_at >= DATE_SUB(NOW(), INTERVAL 7 DAY);
+
+SELECT * FROM Student WHERE reg_date IS NULL;
+
 
 
