--- a/단위테스트 리허설.md
+++ b/단위테스트 리허설.md
@@ -135,3 +135,10 @@ SELECT title, LENGTH(title) AS title_length FROM Course;
 SELECT * FROM Enrollment WHERE enrolled_at >= DATE_SUB(NOW(), INTERVAL 7 DAY);
 
 SELECT * FROM Student WHERE reg_date IS NULL;
+```
+## 집계함수 + GROUP BY + LEFT JOIN
+```sql
+SELECT s.student_id, s.name, AVG(sc.score) AS avg_score 
+FROM student s
+INNER JOIN score sc ON s.student_id = sc.student_id 
+GROUP BY s.student_id, s.name;
