--- a/단위테스트 리허설.md
+++ b/단위테스트 리허설.md
@@ -142,3 +142,11 @@ SELECT s.student_id, s.name, AVG(sc.score) AS avg_score
 FROM student s
 INNER JOIN score sc ON s.student_id = sc.student_id 
 GROUP BY s.student_id, s.name;
+
+SELECT c.course_id, c.title, c.fee, count(e.enrollment_id) AS student_count, c.fee * count(e.enrollment_id) AS total_revenue
+FROM course c 
+JOIN enrollment e ON c.course_id = e.course_id 
+WHERE e.payment_status = 'PAID'
+group by c.course_id, c.title, c.fee;
+
+SELECT instructor, COUNT(*) AS course_count FROM Course GROUP BY instructor;
