--- a/단위테스트 리허설.md
+++ b/단위테스트 리허설.md
@@ -149,4 +149,6 @@ JOIN enrollment e ON c.course_id = e.course_id
 WHERE e.payment_status = 'PAID'
 group by c.course_id, c.title, c.fee;
 
-SELECT instructor, COUNT(*) AS course_count FROM Course GROUP BY instructor;
+SELECT instructor, COUNT(*) AS course_count 
+FROM course 
+GROUP BY instructor;
