--- a/단위테스트 리허설.md
+++ b/단위테스트 리허설.md
@@ -152,3 +152,16 @@ group by c.course_id, c.title, c.fee;
 SELECT instructor, COUNT(*) AS course_count 
 FROM course 
 GROUP BY instructor;
+
+SELECT ei.exam_id, ei.exam_name, MAX(sc.score) AS max_score, MIN(sc.score) AS min_score
+FROM examInfo ei 
+JOIN score sc ON ei.exam_id = sc.exam_id
+GROUP BY ei.exam_id, ei.exam_name;
+```
+
+## inner/left join
+```sql
+SELECT s.name AS student_name, c.title AS course_title 
+FROM student s
+JOIN enrollment e ON s.student_id = e.student_id 
+JOIN course c ON e.course_id = c.course_id;
