--- a/단위테스트 리허설.md
+++ b/단위테스트 리허설.md
@@ -165,3 +165,8 @@ SELECT s.name AS student_name, c.title AS course_title
 FROM student s
 JOIN enrollment e ON s.student_id = e.student_id 
 JOIN course c ON e.course_id = c.course_id;
+
+SELECT s.student_id, s.name 
+FROM student s 
+LEFT JOIN enrollment e ON s.student_id = e.student_id 
+WHERE e.enrollment_id IS NULL;
