--- a/단위테스트 리허설.md
+++ b/단위테스트 리허설.md
@@ -170,3 +170,14 @@ SELECT s.student_id, s.name
 FROM student s 
 LEFT JOIN enrollment e ON s.student_id = e.student_id 
 WHERE e.enrollment_id IS NULL;
+
+SELECT c.course_id, c.title 
+FROM course c
+LEFT JOIN examInfo ei ON c.course_id = ei.course_id 
+WHERE ei.exam_id IS NULL
+
+SELECT s.name AS student_name, c.title AS course_title, ei.exam_name, sc.score
+FROM student s 
+JOIN score sc ON s.student_id = sc.student_id -- R1(student join score)
+JOIN examInfo ei ON sc.exam_id = ei.exam_id -- R2(R1 join examinfo)
+JOIN course c ON ei.course_id = c.course_id; -- R3(R2 join course)
