--- a/단위테스트 리허설.md
+++ b/단위테스트 리허설.md
@@ -181,3 +181,17 @@ FROM student s
 JOIN score sc ON s.student_id = sc.student_id -- R1(student join score)
 JOIN examInfo ei ON sc.exam_id = ei.exam_id -- R2(R1 join examinfo)
 JOIN course c ON ei.course_id = c.course_id; -- R3(R2 join course)
+```
+
+## CASE WHEN
+```sql
+SELECT s.name, ei.exam_name, sc.score,
+    CASE WHEN sc.score >= 90 THEN 'A' 
+         WHEN sc.score >= 80 THEN 'B'
+        WHEN sc.score >= 70 THEN 'C' 
+        WHEN sc.score >= 60 THEN 'D'
+        ELSE 'F'
+    END AS grade
+FROM Score sc
+JOIN Student s  ON sc.student_id = s.student_id
+JOIN ExamInfo ei ON sc.exam_id = ei.exam_id;
