--- a/단위테스트 리허설.md
+++ b/단위테스트 리허설.md
@@ -195,3 +195,11 @@ SELECT s.name, ei.exam_name, sc.score,
 FROM Score sc
 JOIN Student s  ON sc.student_id = s.student_id
 JOIN ExamInfo ei ON sc.exam_id = ei.exam_id;
+```
+
+## 트랜잭션
+```sql
+START TRANSACTION;
+
+DELETE FROM enrollment WHERE student_id = 1;
+SELECT * FROM enrollment WHERE student_id = 1;
