--- a/단위테스트 리허설.md
+++ b/단위테스트 리허설.md
@@ -203,3 +203,7 @@ START TRANSACTION;
 
 DELETE FROM enrollment WHERE student_id = 1;
 SELECT * FROM enrollment WHERE student_id = 1;
+```
+## 인덱스
+```sql
+CREATE UNIQUE INDEX idx_student_phone ON student(phone);
